feat: modification to remove ImmutableList = > replace by List.of